String formating from String to string
